First Draft of Joey Xie's website

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -135,6 +135,11 @@
               </button>
             </li>
           {% endif %}
+          
+          <li class="nav-link">
+            {%- include lang_switcher.liquid -%}
+          </li>
+              
         </ul>
       </div>
     </div>
