Fixed the switching englist back issue

--- a/_includes/lang_switcher.liquid
+++ b/_includes/lang_switcher.liquid
@@ -1,12 +1,21 @@
 {% for lang in site.languages %}
-    {% assign lang_name = site.data[lang].l10n.lang_name %}
-    {% if lang == site.active_lang %}
-{{ lang_name }}
+  {% comment %} Fetch the language name from your data files {% endcomment %}
+  {% assign lang_name = site.data[lang].l10n.lang_name %}
+
+  {% if lang == site.active_lang %}
+    {% comment %} Just show the name if it's the current language {% endcomment %}
+       {{ lang_name }} 
+  {% else %}
+    {% if lang == site.default_lang %}
+      {% comment %} Link to the default language version (e.g., /about/) {% endcomment %}
+      <a {% static_href %}href="{{ page.url | relative_url }}"{% endstatic_href %}>
+        {{ lang_name }}
+      </a>
     {% else %}
-        {% if lang == site.default_lang %}
-             <a href=" {{ page.url }}">{{ lang_name }}</a>
-        {% else %}
-             <a href="/{{ lang }}{{ page.url }}">{{ lang_name }}</a>
-        {% endif %}
+      {% comment %} Link to the localized version (e.g., /zh/about/) {% endcomment %}
+      <a  {% static_href %}href="{{ site.baseurl }}/{{ lang }}{{ page.url }}"{% endstatic_href %}>
+        {{ lang_name }}
+      </a>
     {% endif %}
+  {% endif %}
 {% endfor %}
