--- a/_includes/news.liquid
+++ b/_includes/news.liquid
@@ -8,7 +8,8 @@
       {% endif %}
     >
       <table class="table table-sm table-borderless">
-        {% assign news = site.news | reverse %}
+        {% assign all_news = site.news | where: "lang", site.active_lang %}
+        {% assign news = all_news | reverse %}
         {% if include.limit and site.announcements.limit %}
           {% assign news_limit = site.announcements.limit %}
         {% else %}
